--- a/public/about/index.html
+++ b/public/about/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head prefix="og: http://ogp.me/ns#">
   <meta charset="utf-8">
-  <title>About | Feflow.js</title>
+  <title>About | matmanjs</title>
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Canonical links -->
@@ -38,7 +38,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/1/docsearch.min.css">
   <!-- RSS -->
-  <link rel="alternate" href="/atom.xml" title="Feflow.js">
+  <link rel="alternate" href="/atom.xml" title="matmanjs">
   <!-- Open Graph -->
   <meta name="description" content="Hexo was originally created and maintained by Tommy Chen in 2012, now it becomes a project with 16k stars (still increasing) and 35k downloads monthly (data from 2017-May). It already helps thousands">
 <meta property="og:type" content="website">
